# p6

./: README.md
cameras/intel_realsense/: pointcloud_stream.py  video_process_class.py  visualize.py
kuka_communication/: example_continuous_ptp.py  example_lin_continuous_with_logging.py  example_ptp.py  example_ptp_control.py  example_read.py  logger.py
kuka_communication/include/: kuka.py  openshowvar.py
kuka_communication/server/: in_out_example.src  lin_continuous_with_logging_example.src  ptp_continuous_example.src  ptp_example.src  server.src  set_tcp_velocity_example.src
pointcloud_analysis/: CMakeLists.txt  README_t_joint_analysis.md  config.yaml  main.cpp  quality_scan.py  t_joint_analysis.py
pointcloud_analysis/include/: helperFunctions.py  img.h  net.py  pointCloud.py  pointCloudLine.py  pointcloud.h  quality.py  t_joint_trajectory.py  trajectory.py
pointcloud_analysis/src/: img.cpp  pointcloud.cpp
pointcloud_analysis/t-scans/T_joint_scans/: T_joint_attempt_1.txt
pointcloud_analysis/t-scans/T_joint_scans/KUKA_traces/: WINDOWS-SVF2O6T - R2-D2_TEST1_KRCIO.r64  WINDOWS-SVF2O6T - R2-D2_TEST1_KRCIO.trc  WINDOWS-SVF2O6T - R2-D2_TEST1_KRCIpo.r64  WINDOWS-SVF2O6T - R2-D2_TEST1_KRCIpo.trc  WINDOWS-SVF2O6T - R2-D2_TEST1_PROG.TXT
pointcloud_analysis/trajectories/: trajectory_left.txt  trajectory_right.txt
pointcloud_matching _handin/registration_code/: CE-JACKET-REDUCED-V2-PCD-25000.pcd  Pointcloudspointcloud_0_120520.txt.pcd  Pointcloudspointcloud_0_120520.txt_noise_0.010000.pcd  (+14 more)
scan_trajectory/: README.md  helper_functions.py  run_this.ipynb
(+20 files in other folders)
